--- a/config.yml
+++ b/config.yml
@@ -72,6 +72,8 @@ homebrew_cask_apps:
   - steelseries-exactmouse-tool
   - logitech-camera-settings
   - intune-company-portal
+  - citrix-workspace
+  - chromium
 
 homebrew_taps:
   - homebrew/core
