Changed brew deps

--- a/config.yml
+++ b/config.yml
@@ -41,9 +41,7 @@ homebrew_installed_packages:
   - zsh-completions
   - zsh-autosuggestions
   - zsh-syntax-highlighting
-  - pango
-  - zlib
-  - cairo
+  - pkg-config
 
 homebrew_cask_apps:
   - 1password
